--- a/atzcw-main/src/main/webapp/WEB-INF/web.xml
+++ b/atzcw-main/src/main/webapp/WEB-INF/web.xml
@@ -82,15 +82,15 @@
     </listener>
 
     <!-- 配置springsecurity的filter -->
-    <filter>
-        <!--名称固定,不能变-->
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+<!--    <filter>-->
+<!--        &lt;!&ndash;名称固定,不能变&ndash;&gt;-->
+<!--        <filter-name>springSecurityFilterChain</filter-name>-->
+<!--        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+<!--    </filter>-->
+<!--    <filter-mapping>-->
+<!--        <filter-name>springSecurityFilterChain</filter-name>-->
+<!--        <url-pattern>/*</url-pattern>-->
+<!--    </filter-mapping>-->
 
 
 </web-app>
